--- a/epan/dissectors/Makefile.am
+++ b/epan/dissectors/Makefile.am
@@ -574,6 +574,7 @@ DISSECTOR_SRC = \
 	packet-elcom.c		\
 	packet-elmi.c		\
 	packet-enc.c		\
+	packet-enet.c		\
 	packet-enip.c		\
 	packet-enrp.c		\
 	packet-enttec.c		\
